--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,109 +1,173 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <title>FiberGuardian - Tela Principal</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>FiberGuardian - Tela Principal</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-  <style>
-    body {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      margin: 0;
-    }
-    .main-wrapper {
-      flex: 1;
-      display: flex;
-    }
-    .sidebar {
-      width: 250px;
-      background-color: #343a40;
-      color: #fff;
-    }
-    .sidebar a {
-      color: #ccc;
-      text-decoration: none;
-    }
-    .sidebar a:hover {
-      color: #fff;
-      background-color: #495057;
-    }
-    .sidebar .nav-link.active {
-      background-color: #495057;
-      color: #fff;
-    }
-    .content {
-      flex-grow: 1;
-      padding: 20px;
-    }
-    .sidebar .menu-header {
-      padding: 1rem;
-      font-size: 1.25rem;
-      font-weight: bold;
-      background-color: #212529;
-      text-align: center;
-    }
-    footer {
-      background-color: #f8f9fa;
-      text-align: center;
-      padding: 0.75rem;
-      font-size: 0.9rem;
-      border-top: 1px solid #dee2e6;
-    }
-  </style>
+    <style>
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+        }
+
+        .main-wrapper {
+            flex: 1;
+            display: flex;
+        }
+
+        .sidebar {
+            width: 250px;
+            background-color: #c4cdd3;
+            color: #fff;
+        }
+
+        .sidebar a {
+            color: #4d0b0b;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .sidebar a:hover {
+            color: #fff;
+            background-color: #495057;
+            font-weight: 800;
+        }
+
+        .sidebar .nav-link.active {
+            background-color: #495057;
+            color: #fff;
+        }
+
+        .content {
+            flex-grow: 1;
+            padding: 20px;
+        }
+
+        .sidebar .menu-header {
+            padding: 1rem;
+            font-size: 1.25rem;
+            font-weight: bold;
+            background-color: #212529;
+            text-align: center;
+        }
+
+        footer {
+            background-color: #5f737e;
+            text-align: center;
+            padding: 0.75rem;
+            font-size: 0.9rem;
+            border-top: 1px solid #dee2e6;
+        }
+
+        /* ALTERADO: divisória bonita com sombra suave e sem interação */
+        .logo-divider {
+            height: 2px;
+            background: linear-gradient(to right, #ffffff33, #ffffffaa, #ffffff33);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+            pointer-events: none;
+            user-select: none;
+            -webkit-user-select: none;
+        }
+
+        /* ALTERADO: container isolado da logo + divisor */
+        .logo-container {
+            background-color: #c4cdd3;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 1rem 0;
+            user-select: none;
+            -webkit-user-select: none;
+        }
+
+        .logo-container img {
+            max-height: 170px;
+            pointer-events: none;
+            user-select: none;
+            -webkit-user-select: none;
+        }
+    </style>
 </head>
+
 <body>
-  <div class="main-wrapper">
-    <nav class="sidebar d-flex flex-column p-2">
-      <div class="menu-header">FiberGuardian</div>
+    <div class="main-wrapper">
+        <nav class="sidebar d-flex flex-column p-2">
 
-      <ul class="nav nav-pills flex-column" id="menu">
-        <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#menu-cadastros" role="button" aria-expanded="false">Cadastros</a>
-          <div class="collapse" id="menu-cadastros">
-            <ul class="nav flex-column ms-3">
-              <li class="nav-item"><a class="nav-link" href="#">Fornecedor</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Produto</a></li>
+            <!-- ALTERADO: logo e divisória separados da menu-header -->
+            <div class="logo-container">
+                <img src="assets/img/logo-fiberguardian.png" alt="FiberGuardian Logo" class="img-fluid mb-2">
+                <div class="logo-divider w-100 my-2"></div>
+            </div>
+
+            <!-- Menu começa aqui -->
+            <ul class="nav nav-pills flex-column" id="menu">
+                <li class="nav-item">
+                    <a class="nav-link" data-bs-toggle="collapse" href="#menu-cadastros" role="button"
+                        aria-expanded="false">Cadastros</a>
+                    <div class="collapse" id="menu-cadastros">
+                        <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a class="nav-link" href="#">Fornecedor</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Produto</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li class="nav-item mt-2">
+                    <a class="nav-link" data-bs-toggle="collapse" href="#menu-laboratorio" role="button"
+                        aria-expanded="false">Laboratório</a>
+                    <div class="collapse" id="menu-laboratorio">
+                        <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a class="nav-link" href="#">Cadastrar Resultados</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Relatórios</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li class="nav-item mt-2">
+                    <a class="nav-link" data-bs-toggle="collapse" href="#menu-engenharia" role="button"
+                        aria-expanded="false">Engenharia</a>
+                    <div class="collapse" id="menu-engenharia">
+                        <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a class="nav-link" href="#">Cadastrar Parecer</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Relatórios</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li class="nav-item mt-2">
+                    <a class="nav-link" data-bs-toggle="collapse" href="#menu-perfil" role="button"
+                        aria-expanded="false">Gestão
+                        De Usuários</a>
+                    <div class="collapse" id="menu-perfil">
+                        <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a class="nav-link" href="#">Listar Usuários</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Cadastrar Novo Usuário</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Alterar Perfil de Usuário</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Bloquear/Desbloquear Usuário</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
-          </div>
-        </li>
+        </nav>
 
-        <li class="nav-item mt-2">
-          <a class="nav-link" data-bs-toggle="collapse" href="#menu-laboratorio" role="button" aria-expanded="false">Laboratório</a>
-          <div class="collapse" id="menu-laboratorio">
-            <ul class="nav flex-column ms-3">
-              <li class="nav-item"><a class="nav-link" href="#">Cadastrar Resultados</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Relatórios</a></li>
-            </ul>
-          </div>
-        </li>
+        <main class="content">
+            <h3>Bem-vindo ao FiberGuardian</h3>
+            <p>Selecione uma opção no menu lateral para começar.</p>
+        </main>
+    </div>
 
-        <li class="nav-item mt-2">
-          <a class="nav-link" data-bs-toggle="collapse" href="#menu-engenharia" role="button" aria-expanded="false">Engenharia</a>
-          <div class="collapse" id="menu-engenharia">
-            <ul class="nav flex-column ms-3">
-              <li class="nav-item"><a class="nav-link" href="#">Cadastrar Parecer</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Relatórios</a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </nav>
+    <footer class="text-start">
+        <i class="fas fa-box"></i>
+        Projeto elaborado pelos alunos Giovanni, Siegrid, Renata e Venâncio da turma 2025 do curso da Blusoft Entra21
+    </footer>
 
-    <main class="content">
-      <h1>Bem-vindo ao FiberGuardian</h1>
-      <p>Selecione uma opção no menu lateral para começar.</p>
-    </main>
-  </div>
-
-  <footer>
-    <i class="fas fa-box"></i>
-    Projeto elaborado pelos alunos Giovanni, Siegrid, Renata e Venâncio da turma 2025 do curso da Blusoft Entra21
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://kit.fontawesome.com/your-token-here.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/your-token-here.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
