--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>FiberGuardian - Tela Principal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
+	<script src="https://kit.fontawesome.com/c0d30aa2de.js" crossorigin="anonymous"></script>
     <style>
         body {
             min-height: 100vh;
@@ -22,12 +21,12 @@
 
         .sidebar {
             width: 250px;
-            background-color: #c4cdd3;
+            background-color: #84c3ec;
             color: #fff;
         }
 
         .sidebar a {
-            color: #4d0b0b;
+            color: #000000;
             text-decoration: none;
             font-weight: 600;
         }
@@ -57,11 +56,12 @@
         }
 
         footer {
-            background-color: #5f737e;
+            background-color: #cae5f3;
             text-align: center;
             padding: 0.75rem;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             border-top: 1px solid #dee2e6;
+            font-weight: 600;
         }
 
         /* ALTERADO: divisória bonita com sombra suave e sem interação */
@@ -76,20 +76,25 @@
 
         /* ALTERADO: container isolado da logo + divisor */
         .logo-container {
-            background-color: #c4cdd3;
+            background-color: #edf0f3;
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 1rem 0;
             user-select: none;
             -webkit-user-select: none;
+            border-radius: 50%;
+            border-color: #92aac2;
+            border-width: 2px;
+            border-style: solid;
+
         }
 
         .logo-container img {
             max-height: 170px;
             pointer-events: none;
-            user-select: none;
             -webkit-user-select: none;
+            user-select: none;
         }
     </style>
 </head>
@@ -101,7 +106,7 @@
             <!-- ALTERADO: logo e divisória separados da menu-header -->
             <div class="logo-container">
                 <img src="assets/img/logo-fiberguardian.png" alt="FiberGuardian Logo" class="img-fluid mb-2">
-                <div class="logo-divider w-100 my-2"></div>
+                <!-- <div class="logo-divider w-100 my-2"></div> -->
             </div>
 
             <!-- Menu começa aqui -->
@@ -111,6 +116,7 @@
                         aria-expanded="false">Cadastros</a>
                     <div class="collapse" id="menu-cadastros">
                         <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a class="nav-link" href="#" onclick="carregarPagina('tela_recebimento.html')">Recebimentos</a></li>						
                             <li class="nav-item"><a class="nav-link" href="#">Fornecedor</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Produto</a></li>
                         </ul>
@@ -155,7 +161,7 @@
             </ul>
         </nav>
 
-        <main class="content">
+        <main class="content" id="conteudo-principal">
             <h3>Bem-vindo ao FiberGuardian</h3>
             <p>Selecione uma opção no menu lateral para começar.</p>
         </main>
@@ -166,8 +172,31 @@
         Projeto elaborado pelos alunos Giovanni, Siegrid, Renata e Venâncio da turma 2025 do curso da Blusoft Entra21
     </footer>
 
+	<script>
+		function carregarPagina(pagina) {
+			fetch(pagina)
+				.then(resposta => {
+					if (!resposta.ok) throw new Error("Erro ao carregar a página.");
+					return resposta.text();
+				})
+				.then(html => {
+					document.getElementById("conteudo-principal").innerHTML = html;
+				})
+				.catch(erro => {
+					document.getElementById("conteudo-principal").innerHTML = "<p>Erro ao carregar conteúdo.</p>";
+					console.error(erro);
+				});
+		}
+		
+		function voltarParaInicio() {
+        document.getElementById("conteudo-principal").innerHTML = `
+            <h3>Bem-vindo ao FiberGuardian</h3>
+            <p>Selecione uma opção no menu lateral para começar.</p>
+        `;
+    }
+	</script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/your-token-here.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
