--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>FiberGuardian - Tela Principal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/c0d30aa2de.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c0d30aa2de.js" crossorigin="anonymous"></script>
     <style>
         body {
             min-height: 100vh;
@@ -116,7 +116,8 @@
                         aria-expanded="false">Cadastros</a>
                     <div class="collapse" id="menu-cadastros">
                         <ul class="nav flex-column ms-3">
-                            <li class="nav-item"><a class="nav-link" href="#" onclick="carregarPagina('tela_recebimento.html')">Recebimentos</a></li>						
+                            <li class="nav-item"><a class="nav-link" href="#"
+                                    onclick="carregarPagina('tela_recebimento.html')">Recebimentos</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Fornecedor</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Produto</a></li>
                         </ul>
@@ -172,29 +173,39 @@
         Projeto elaborado pelos alunos Giovanni, Siegrid, Renata e Venâncio da turma 2025 do curso da Blusoft Entra21
     </footer>
 
-	<script>
-		function carregarPagina(pagina) {
-			fetch(pagina)
-				.then(resposta => {
-					if (!resposta.ok) throw new Error("Erro ao carregar a página.");
-					return resposta.text();
-				})
-				.then(html => {
-					document.getElementById("conteudo-principal").innerHTML = html;
-				})
-				.catch(erro => {
-					document.getElementById("conteudo-principal").innerHTML = "<p>Erro ao carregar conteúdo.</p>";
-					console.error(erro);
-				});
-		}
-		
-		function voltarParaInicio() {
-        document.getElementById("conteudo-principal").innerHTML = `
-            <h3>Bem-vindo ao FiberGuardian</h3>
-            <p>Selecione uma opção no menu lateral para começar.</p>
-        `;
-    }
-	</script>
+    <script>
+        function carregarPagina(pagina) {
+            fetch(pagina)
+                .then(resposta => {
+                    if (!resposta.ok) throw new Error("Erro ao carregar a página.");
+                    return resposta.text();
+                })
+                .then(html => {
+                    document.getElementById("conteudo-principal").innerHTML = html;
+
+                    // Após carregar o HTML, verificar se existe script associado
+                    let scriptPath = '';
+
+                    if (pagina.includes('tela_recebimento.html')) {
+                        scriptPath = 'assets/js/tela_recebimento.js';
+                    }
+
+                    if (scriptPath) {
+                        const script = document.createElement('script');
+                        script.src = scriptPath;
+                        script.onload = function () {
+                            console.log(`Script ${scriptPath} carregado com sucesso.`);
+                        };
+                        document.body.appendChild(script);
+                    }
+                })
+                .catch(erro => {
+                    document.getElementById("conteudo-principal").innerHTML = "<p>Erro ao carregar conteúdo.</p>";
+                    console.error(erro);
+                });
+        }
+    </script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
