a-reorganizado diretorios b-criado namespace controlado c-boas praticas map diretorios

--- a/frontend/src/main/webapp/tela_recebimento.html
+++ b/frontend/src/main/webapp/tela_recebimento.html
@@ -135,7 +135,8 @@
       <div class="text-center mt-3">
         <button class="btn btn-primary btn-custom">Cadastrar</button>
         <button class="btn btn-secondary btn-custom">Imprimir</button>
-        <button class="btn btn-danger btn-custom" onclick="window.voltarParaInicio()">Sair</button>
+        <button class="btn btn-danger btn-custom"
+          onclick="FiberGuardian.TelaRecebimento.voltarParaInicio()">Sair</button>
       </div>
     </div>
   </div>
