Desenvolvendo integracao pag login com backend, problemas com VSCODE live-server

--- a/frontend/src/main/webapp/login.html
+++ b/frontend/src/main/webapp/login.html
@@ -102,6 +102,12 @@
     </div>
   </div>
 </div>
-
+<script src="assets/js/fiberguardian_utils.js"></script>
+<script src="assets/js/tela_login.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    FiberGuardian.TelaLogin.init();
+  });
+</script>
 </body>
 </html>
