--- a/frontend/src/main/webapp/login.html
+++ b/frontend/src/main/webapp/login.html
@@ -104,10 +104,13 @@
 </div>
 <script src="assets/js/fiberguardian_utils.js"></script>
 <script src="assets/js/tela_login.js"></script>
-<script>
+<script defer>
+  /*
   document.addEventListener("DOMContentLoaded", function () {
     FiberGuardian.TelaLogin.init();
   });
+  */
+     FiberGuardian.TelaLogin.init();
 </script>
 </body>
 </html>
