Inclusao usuario com sucesso, problema de rota nao habilitada e sessão de usuario não persistida

--- a/frontend/src/main/webapp/tela_cadastro_usuario.html
+++ b/frontend/src/main/webapp/tela_cadastro_usuario.html
@@ -117,10 +117,11 @@
           <label class="form-label" for="perfil"><i class="fas fa-id-badge me-2"></i>Perfil</label>
           <select class="form-select" id="perfil" required>
             <option value="" disabled selected>Selecione um perfil</option>
-            <option value="ADMINISTRADOR">Administrador</option>
+            <option value="ADMIN">Administrador</option>
             <option value="LABORATORIO">Laboratório</option>
             <option value="ENGENHARIA">Engenharia</option>
-            <option value="ENGENHARIA_LABORATORIO">Engenharia & Laboratório</option>
+            <option value="LAB_ENG">Engenharia & Laboratório</option>
+            <option value="USUARIO">Usuário</option>
           </select>
         </div>
 
