--- a/frontend/src/main/webapp/tela_cadastro_usuario.html
+++ b/frontend/src/main/webapp/tela_cadastro_usuario.html
@@ -1,176 +1,134 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Cadastro de Usuário</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      rel="stylesheet"
-    />
-    <style>
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
 
-      body {
-        background-color: #f8f9fa;
-      }
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <title>Cadastro de Usuário</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+  <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
-      .container {
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+    body {
+      background-color: #f8f9fa;
+    }
 
-      .card {
-        width: 100%;
-        max-width: 420px;
-        padding: 1.5rem;
-      }
+    .container {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-      h4 {
-        font-size: 1.25rem;
-        margin-bottom: 1rem;
-      }
+    .card {
+      width: 100%;
+      max-width: 420px;
+      padding: 1.5rem;
+    }
 
-      label.form-label {
-        font-size: 0.9rem;
-      }
+    h4 {
+      font-size: 1.25rem;
+      margin-bottom: 1rem;
+    }
 
-      .error-message {
-        color: red;
-        font-size: 0.8rem;
-        display: none;
-      }
+    label.form-label {
+      font-size: 0.9rem;
+    }
 
-      .input-error {
-        border-color: red !important;
-      }
+    .error-message {
+      color: red;
+      font-size: 0.8rem;
+      display: none;
+    }
 
-      #mensagemSistema {
-        font-size: 0.875rem;
-      }
+    .input-error {
+      border-color: red !important;
+    }
 
-      .text-success {
-        font-size: 0.85rem;
-      }
-    </style>
-  </head>
+    #mensagemSistema {
+      font-size: 0.875rem;
+    }
 
-  <body>
-    <div class="container">
-      <div class="card shadow-sm text-center">
-        <div class="bg-secondary text-white py-2 px-3 rounded mb-5">
-          <h4 class="m-0">CADASTRO DE USUÁRIO</h4>
-        </div>
-        <form id="cadastroForm">
-          <div class="mb-2 text-start">
-            <label class="form-label" for="nome"
-              ><i class="fas fa-user me-2"></i>Nome Completo</label
-            >
-            <input
-              class="form-control"
-              id="nome"
-              placeholder="Digite seu nome completo"
-              required
-              type="text"
-            />
-          </div>
+    .text-success {
+      font-size: 0.85rem;
+    }
+  </style>
+</head>
 
-          <div class="mb-2 text-start">
-            <label class="form-label" for="email"
-              ><i class="fas fa-envelope me-2"></i>E-mail</label
-            >
-            <input
-              class="form-control"
-              id="email"
-              placeholder="Digite seu e-mail"
-              required
-              type="email"
-            />
-            <div class="error-message" id="emailInvalidError">
-              Formato de e-mail inválido.
-            </div>
-            <div class="error-message" id="emailUsedError">
-              E-mail já cadastrado.
-            </div>
-          </div>
-
-          <div class="mb-2 text-start">
-            <label class="form-label" for="perfil"
-              ><i class="fas fa-id-badge me-2"></i>Perfil</label
-            >
-            <select class="form-select" id="perfil" required>
-              <option value="" disabled selected>Selecione um perfil</option>
-              <option value="ADMIN">Administrador</option>
-              <option value="LABORATORIO">Laboratório</option>
-              <option value="ENGENHARIA">Engenharia</option>
-              <option value="LAB_ENG">Engenharia & Laboratório</option>
-              <option value="USUARIO">Usuário</option>
-            </select>
-          </div>
-
-          <div class="mb-2 text-start">
-            <label class="form-label" for="senha"
-              ><i class="fas fa-lock me-2"></i>Senha</label
-            >
-            <input
-              class="form-control"
-              id="senha"
-              placeholder="Digite sua senha"
-              required
-              type="password"
-            />
-          </div>
-
-          <div class="mb-2 text-start">
-            <label class="form-label" for="confirmarSenha"
-              ><i class="fas fa-lock me-2"></i>Confirmação de Senha</label
-            >
-            <input
-              class="form-control"
-              id="confirmarSenha"
-              placeholder="Confirme sua senha"
-              required
-              type="password"
-            />
-            <div class="error-message" id="senhaError">
-              As senhas não coincidem.
-            </div>
-          </div>
-
-          <button class="btn btn-primary w-100 mt-2" type="submit">
-            <i class="fas fa-user-plus me-2"></i>Criar Conta
-          </button>
-
-          <div
-            id="mensagemSistema"
-            class="alert d-none mt-3"
-            role="alert"
-          ></div>
-
-          <div class="text-center mt-3">
-            <a class="text-decoration-none text-success" href="index.html">
-              <i class="fas fa-arrow-left me-2"></i>Voltar ao Menu Principal
-            </a>
-          </div>
-        </form>
+<body>
+  <div class="container">
+    <div class="card shadow-sm text-center">
+      <div class="bg-secondary text-white py-2 px-3 rounded mb-5">
+        <h4 class="m-0">CADASTRO DE USUÁRIO</h4>
       </div>
-    </div>
+      <form id="cadastroForm">
+        <div class="mb-2 text-start">
+          <label class="form-label" for="nome"><i class="fas fa-user me-2"></i>Nome Completo</label>
+          <input class="form-control" id="nome" placeholder="Digite seu nome completo" required type="text" />
+        </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        FiberGuardian.TelaCadastroUsuario.init();
-      });
-    </script>
-  </body>
+        <div class="mb-2 text-start">
+          <label class="form-label" for="email"><i class="fas fa-envelope me-2"></i>E-mail</label>
+          <input class="form-control" id="email" placeholder="Digite seu e-mail" required type="email" />
+          <div class="error-message" id="emailInvalidError">
+            Formato de e-mail inválido.
+          </div>
+          <div class="error-message" id="emailUsedError">
+            E-mail já cadastrado.
+          </div>
+        </div>
+
+        <div class="mb-2 text-start">
+          <label class="form-label" for="perfil"><i class="fas fa-id-badge me-2"></i>Perfil</label>
+          <select class="form-select" id="perfil" required>
+            <option value="" disabled selected>Selecione um perfil</option>
+            <option value="ADMIN">Administrador</option>
+            <option value="LABORATORIO">Laboratório</option>
+            <option value="ENGENHARIA">Engenharia</option>
+            <option value="ENG_LAB">Engenharia & Laboratório</option>
+            <option value="USUARIO">Usuário</option>
+          </select>
+        </div>
+
+        <div class="mb-2 text-start">
+          <label class="form-label" for="senha"><i class="fas fa-lock me-2"></i>Senha</label>
+          <input class="form-control" id="senha" placeholder="Digite sua senha" required type="password" />
+        </div>
+
+        <div class="mb-2 text-start">
+          <label class="form-label" for="confirmarSenha"><i class="fas fa-lock me-2"></i>Confirmação de Senha</label>
+          <input class="form-control" id="confirmarSenha" placeholder="Confirme sua senha" required type="password" />
+          <div class="error-message" id="senhaError">
+            As senhas não coincidem.
+          </div>
+        </div>
+
+        <button class="btn btn-primary w-100 mt-2" type="submit">
+          <i class="fas fa-user-plus me-2"></i>Criar Conta
+        </button>
+
+        <div id="mensagemSistema" class="alert d-none mt-3" role="alert"></div>
+
+        <div class="text-center mt-3">
+          <a class="text-decoration-none text-success" href="index.html">
+            <i class="fas fa-arrow-left me-2"></i>Voltar ao Menu Principal
+          </a>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      FiberGuardian.TelaCadastroUsuario.init();
+    });
+  </script>
+</body>
+
 </html>
