Implementado ativa/desativa na tabela de usuarios, problemas com o endpoint de logout

--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -241,11 +241,16 @@
                     >Alterar Meus Dados</a
                   >
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Bloquear/Desbloquear Usuário</a>
-                </li>
               </ul>
             </div>
+          </li>
+          <li class="nav-item mt-2">
+            <a
+              class="nav-link"
+              href="#"
+              onclick="FiberGuardian.Core.realizarLogout()"
+              >Logout Sistema</a
+            >
           </li>
         </ul>
       </nav>
