--- a/frontend/src/main/webapp/tela_cadastro_usuario.html
+++ b/frontend/src/main/webapp/tela_cadastro_usuario.html
@@ -117,18 +117,47 @@
             </div>
           </div>
 
-          <div class="mb-2 text-start">
-            <label class="form-label" for="perfil"
-              ><i class="fas fa-id-badge me-2"></i>Perfil</label
-            >
-            <select class="form-select" id="perfil" required>
-              <option value="" disabled selected>Selecione um perfil</option>
-              <option value="ADMIN">Administrador</option>
-              <option value="LABORATORIO">Laboratório</option>
-              <option value="ENGENHARIA">Engenharia</option>
-              <option value="ENG_LAB">Engenharia & Laboratório</option>
-              <option value="USUARIO">Usuário</option>
-            </select>
+          <div class="row">
+            <div class="col-md-6 mb-2 text-start">
+              <label class="form-label" for="perfil">
+                <i class="fas fa-id-badge me-2"></i>Perfil
+              </label>
+              <select class="form-select" id="perfil" required>
+                <option value="" disabled selected>Selecione um perfil</option>
+                <option value="ADMIN">Administrador</option>
+                <option value="LABORATORIO">Laboratório</option>
+                <option value="ENGENHARIA">Engenharia</option>
+                <option value="ENG_LAB">Engenharia & Laboratório</option>
+                <option value="USUARIO">Usuário</option>
+              </select>
+            </div>
+
+            <div class="col-md-6 mb-2 text-start">
+              <label class="form-label" for="setor">
+                <i class="fas fa-industry me-2"></i>Setor
+              </label>
+              <select class="form-select" id="setor" required>
+                <option value="" disabled selected>Selecione um setor</option>
+                <option value="FIACAO">Fiação</option>
+                <option value="TECELAGEM">Tecelagem</option>
+                <option value="PREPARACAO">Preparação</option>
+                <option value="BENEFICIAMENTO">Beneficiamento</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 mb-2 text-start">
+              <label class="form-label" for="turno">
+                <i class="fas fa-clock me-2"></i>Turno
+              </label>
+              <select class="form-select" id="turno" required>
+                <option value="" disabled selected>Selecione um turno</option>
+                <option value="PRIMEIRO">1º Turno</option>
+                <option value="SEGUNDO">2º Turno</option>
+                <option value="GERAL">Geral</option>
+              </select>
+            </div>
           </div>
 
           <div class="mb-2 text-start">
