implementando tela esqueceu senha, metodo avisos modificado, css agora separado do html

--- a/frontend/src/main/webapp/login.html
+++ b/frontend/src/main/webapp/login.html
@@ -189,16 +189,20 @@
           </svg>
         </div>
       </div>
-
       <form method="POST" action="/login" id="loginForm">
         <div class="mb-3 text-start">
           <label for="email" class="form-label">E-mail</label>
           <input type="email" class="form-control" id="email" name="email" required autofocus>
         </div>
 
-        <div class="mb-3 text-start">
+        <div class="mb-1 text-start">
           <label for="senha" class="form-label">Senha</label>
           <input type="password" class="form-control" id="senha" name="senha" required>
+        </div>
+
+        <!-- Link de "Esqueci minha senha" -->
+        <div class="mb-3 text-end">
+          <a href="tela_esqueci_senha.html" class="link-secondary" style="font-size: 0.9rem;">Esqueci minha senha</a>
         </div>
 
         <div class="d-grid">
